--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,10 +9,8 @@
             "program": "${workspaceFolder}/cmd/chat/.",
             "env": {},
             "args": [
-                // "--workspace_folder=${workspaceFolder}",
-                // "--api_url=http://localhost:65432",
-                // "--port=65433",
-                // "--default_image_url=/templates/no_photo.png"
+                "--workspace_folder=${workspaceFolder}",
+                "--port=8080",
             ]
         }
     ]
